# comfyui-group-manager

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
web/: groupManager.js
