[project]
name = "comfyui-group-manager"
description = "Adds a Groups sidebar tab listing every root-level workflow group with a bypass/enable toggle and a jump-to-group button."
version = "1.0.0"
license = { text = "MIT" }
dependencies = []

[project.urls]
Repository = "https://github.com/sudo-sumo/comfyui-group-manager"

[tool.comfy]
PublisherId = "sudo-sumo"
DisplayName = "Group Manager"
Icon = ""
